2001-04-10  Dave Peticolas  <dave@krondo.com>

	* src/engine/date.c (__EXTENSIONS__): add a define for solaris

	* src/gnome/dialog-commodities.c: new file. commodity editor.
	unfinished.

2001-04-10  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/net-worth-timeseries.scm: Fixed date argument
	bug. Added auto label rotation.

	* src/scm/date-utilities.scm: Renamed gnc:dateloop to
	gnc:make-date-interval-list and gnc:dateloop-simple to
	gnc:make-date-list.

	* src/scm/report/category-barchart.scm, income-expense-graph.scm:
	Adapt to gnc:dateloop's namechange.

2001-04-10  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/net-worth-timeseries.scm: New file.  You guessed
	it,  a time series net worth barchart.

	* src/scm/report/date-utilities.scm: add gnc:dateloop-simple to
	generate simple timeseries for net worth barchart.

	* src/scm/report/{Makefile.am, report-list.scm}: add new barchart.

2001-04-09  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-price-editor.c: more work

2001-04-09  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/balance-sheet.scm (balance-sheet-renderer):
	use gnc:decompose-accounts to split up accounts.

	* src/scm/report-utilities.scm (gnc:decompose-accountlist):
	add credit accounts to the list of liability accounts.

2001-04-08  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-price-editor.c: more work

	* src/gnome/account-tree.c (gnc_account_tree_insert_row): speedup
	refreshing

	* src/gnome/account-tree.h: remove duplicate declaration

	* src/scm/report/taxtxf.scm: don't use deprecated calls

	* src/guile/gnc.gwp: wrap xaccAccountGetSplitList

	* src/engine/Query-xml-parser-v1.c
	(qrestore_datepred_start_handler): use g_new0 instead of bzero --
	more portable

2001-04-07  Dave Peticolas  <dave@krondo.com>

	* src/engine/md5.h: include stddef.h for size_t

	* src/engine/sql/PostgresBackend.c: include ctype.h for tolower

	* src/engine/guid.h: include stddef.h for size_t
